// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
    data-testid="register-layout"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
          title="Navigation menu"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                />
              </svg>
              User profile
            </a>
          </li>
          <li>
            <button>
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                />
              </svg>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            aria-level="1"
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col w-96 max-w-[100vw] px-4 mb-8"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-:r2:"
          aria-selected="true"
          class="tab-option tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r0:"
          role="tab"
          tabindex="0"
          type="button"
        >
          Plant
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:r4:"
          aria-selected="false"
          class="tab-option"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r1:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Group
        </button>
      </div>
      <div
        class="my-4 md:my-8"
      >
        <div
          aria-labelledby="headlessui-tabs-tab-:r0:"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-:r2:"
          role="tabpanel"
          tabindex="0"
        >
          <form
            class="flex flex-col gap-4"
            id="plantDetails"
          >
            <label
              class="relative"
            >
              <span>
                Plant name
              </span>
              <input
                class="input w-full"
                name="name"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Plant species
              </span>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                autocomplete="off"
                class="input w-full"
                data-headlessui-state=""
                id="headlessui-combobox-input-:r3:"
                name="species"
                pattern=".{0,50}"
                role="combobox"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label>
              <span>
                Pot size
              </span>
              <input
                class="input w-full"
                inputmode="numeric"
                name="pot_size"
                type="text"
                value=""
              />
            </label>
            <label
              class="relative"
            >
              <span>
                Description
              </span>
              <textarea
                class="textarea w-full"
                name="description"
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
          </form>
        </div>
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r1:"
          id="headlessui-tabs-panel-:r4:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
      <button
        class="btn btn-accent mx-auto"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when group querystring param is present 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
    data-testid="register-layout"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
          title="Navigation menu"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                />
              </svg>
              User profile
            </a>
          </li>
          <li>
            <button>
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                />
              </svg>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            aria-level="1"
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col w-96 max-w-[100vw] px-4 mb-8"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-:r7:"
          aria-selected="false"
          class="tab-option"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r5:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Plant
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:r8:"
          aria-selected="true"
          class="tab-option tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r6:"
          role="tab"
          tabindex="0"
          type="button"
        >
          Group
        </button>
      </div>
      <div
        class="my-4 md:my-8"
      >
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r5:"
          id="headlessui-tabs-panel-:r7:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
        <div
          aria-labelledby="headlessui-tabs-tab-:r6:"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-:r8:"
          role="tabpanel"
          tabindex="0"
        >
          <form
            class="flex flex-col gap-4"
            id="groupDetails"
          >
            <label
              class="relative"
            >
              <span>
                Group name
              </span>
              <input
                class="input w-full"
                name="name"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Group location
              </span>
              <input
                class="input w-full"
                name="location"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Description
              </span>
              <textarea
                class="textarea w-full"
                name="description"
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
          </form>
        </div>
      </div>
      <button
        class="btn btn-accent mx-auto"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;
